# ader-dg-transport

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
ader_dg_transport/: __init__.py  utils.py
ader_dg_transport/ader_dg_1D/: advection_ader_standard_1D.py  base_ader_dg_1D.py
ader_dg_transport/ader_dg_2D/: advection_ader_dg_2D.py  advection_iter_ader_dg_2D.py  advection_std_ader_dg_2D.py  base_ader_dg_2D.py  burgers_ader_dg_2D.py  elastic_wave_ader.py  elastic_wave_ader_standard.py  wave_ader.py  wave_ader_cons.py  wave_ader_implicit.py  wave_ader_implicit_adjoint.py  wave_ader_implicit_adjoint_iter.py  (+4 more)
cpp/: ader_dg_2D.hpp  bindings.cpp  dg_2D.hpp  dg_matrices_2D.hpp
experiments/: convergence_advection_2D.py  convergence_advection_3D.py  convergence_burgers_2D.py  run_convergence_experiments.sh  run_stability_1D.sh  run_stability_2D.sh  run_stability_3D.sh  stability_1D.py  stability_2D.py  stability_3D.py  stability_proof_1D.py  wave_ader_stability_2D_bisection.py  wave_ader_stability_2D_plot.py  wave_ader_stability_3D_bisection.py  wave_stability_2D.py  wave_stability_2D_bisection.py  wave_stability_2D_bisection_cons.py  wave_stability_2D_bisection_cons_imp.py  wave_stability_2D_bisection_stages_cons.py  wave_stability_2D_bisection_stages_non_cons.py  wave_stability_2D_plot.py  wave_stability_3D_bisection.py
notebooks/: advection_1D_amplification.ipynb  dg_adjoint-receivers-multifreq.ipynb  dg_adjoint-receivers.ipynb  dg_adjoint.ipynb  elastic-wave-ader-gaussian-stability.ipynb  wave-3D-ader-point-source.ipynb  wave-ader-gaussian-stability.ipynb  wave-adjoint-variable-c.ipynb  wave-adjoint.ipynb  wave-eigenvalues.ipynb
(+10 files in other folders)
