[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.11",
  "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "ader_dg_transport"
version = "2020.0.0"
dependencies = [
  "numpy", "scipy", "matplotlib"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["ader_dg_transport"]

[tool.scikit-build]
cmake.build-type = "Release"